# airunner

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  roadmap.md  setup.sh
.github/workflows/: ci.yml  docker-publish.yml
app/: models.py
app/api/: ui.py  v1_benchmark.py  v1_chat.py  v1_comfy.py  v1_llamacpp.py  v1_models.py  v1_openai.py  v1_system.py
app/core/: auth.py  benchmark_runner.py  command_builder.py  config.py  gguf_parser.py  huggingface_client.py  llamacpp_manager.py  rules_engine.py  run_manager.py  security.py  system_detector.py
app/web/static/: index.html
app/web/static/js/: api.js  auth.js  benchmark.js  config.js  dashboard.js  models.js  settings.js  terminal.js  test.js
config/: config.example.yaml
tests/: test_gguf_parser.py  test_rules_engine.py  test_system_detector.py
