# ─── AI Runner — pyproject.toml ──────────────────────
# Configuration du projet, des dépendances, et des outils de qualité
# (pytest, ruff, mypy, coverage).

[project]
name = "ai-runner"
version = "0.1.0"
description = "FastAPI server for orchestrating LLMs via llama.cpp"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Dépendances de développement — installées via: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ─── Pytest ────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

# ─── Ruff (linter / formatter) ────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Sélection de règles : E (pycodestyle errors), W (warnings),
# F (pyflakes), I (isort / tri des imports)
select = ["E", "W", "F", "I"]
# Ignorer E501 (line too long) — le projet contient déjà des lignes longues
# et line-length=120 couvre la plupart des cas.
ignore = ["E501"]

# ─── Mypy (type checking) ─────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

# ─── Coverage ─────────────────────────────────────────

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/web/*"]

# ─── Build system ──────────────────────────────────────

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]